styled login button, bolded emphatised parts

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <article>
           <h1>Capture and Share the World's Moments</h1>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
             friends and family.
           </p>
           <p>
