--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+</head>
+
+<body>
+  <main class="center-boxes">
+
+    <figure>
+      <img class="img-height" src="images/phones.png" alt="two-mobiles">
+    </figure>
+
+    <section>
+
+      <header class="header-position">
+        <img class="img-logo" src="images/brand.png" alt="logo">
+        <figure class="house-log">
+          <img class="house" src="images/home.png" alt="house">
+          <a href="#">Log in</a>
+        </figure>
+      </header>
+
+      <article class="config-art">
+        <header>
+          <h1>Capture and Share the World's Moments</h1>
+        </header>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="#"><img src="images/badge-iphone.png" alt="badge-iphone"></a>
+        <a href="#"><img src="images/badge-android.png" alt="badge-android"></a>
+      </article>
+    </section>
+  </main>
+
+  <footer class="foot-box">
+    <ul class="cfig-footer">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="cright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
