no me habia dado cuenta que 3 palabras estaban en negrita, ya lo modifiqué

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <article>
 
-                    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
                     </p>
 
                     <p>
