--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <main>
+    <section id="left-box">
+      <figure>
+        <img src="images/phones.png" alt="Mobiles">
+      </figure>
+    </section>
+
+    <section id="right-box">
+      <article class="instagram-login">
+        <img src="images/brand.png" alt="">
+        <div class="login">
+          <a href="#"><img src="images/home.png">Log In</a>
+        </div>
+      </article>
+
+      <article class="wbox">
+        <header>
+          <h1 class="right-box-title">Capture and Share </br> the World's Moments</h1>
+        </header>
+        <p>Instagram is a <b>fast, beautiful and fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+
+        <div class="images">
+          <img src="images/badge-iphone.png" alt="Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </article>
+
+
+    </section>
+
+
+  </main>
+
+  <footer id="footer-info">
+    <ul>
+      <li>About Us</li>
+      <li>Suppot</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+
+    </ul>
+
+  </footer>
+</body>
+
 </html>
