add styles/style.css tolab-css-instagram-clone

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header>
           <h1 class="right-box-title">Capture and Share </br> the World's Moments</h1>
         </header>
-        <p>Instagram is a <b>fast, beautiful and fun</b> way to share your life with friends and family.</p>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
           that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
