--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      
+      <section class="left-container">
+        <img class="phones-img" src="./images/phones.png" alt="Phones image">
+      </section>
+      
+      <div class="rigth-container">
+        <header>
+          <div>
+            <a href="#"><img class="logo-img" src="./images/brand.png" alt="Instagram logo"></a>
+          </div>
+
+          <div class="log-in-container">
+            <img class="home-img" src="./images/home.png" alt="Home icon">
+              <a href="#"><span>Log in</span></a>
+          </div>
+        </header>
+
+      <article class="info-container">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram  Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+
+      <article class="app-buttons">
+            <a href="https://apps.apple.com/es/app/instagram/id389801252" target="blank"><img class="appstore-button-img" src="./images/badge-iphone.png" alt="Download on the App Store"> </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&gl=ES" target="blank"> <img class="googleplay-button-img" src="./images/badge-android.png" alt="Get it on Google Play"></a>
+      </article>
+    </main> 
+
+      <footer>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="copy">&copy; 2014 Instagram</li>
+        </ul>
+      </footer>    
   </body>
 </html>
