--- a/index.html
+++ b/index.html
@@ -4,13 +4,95 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="../lab-css-instagram-clone/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+    <main>
+
+      <section class="global-flex">
+
+        <article class="phones-image">
+
+          <img src="../lab-css-instagram-clone/images/phones.png" alt="Phones">
+
+        </article>
+
+        <article class="flex-right-article">
+
+          <div class="flex-logo-box">
+
+            <img src="../lab-css-instagram-clone/images/brand.png" alt="Instagram" class="img-instagram">
+            <a href="#" class="btn-log-in"><img src="../lab-css-instagram-clone/images/home.png" alt="home" class="home-image">Log In</a>
+
+          </div>
+
+          <div class="flex-text">
+
+            <h2>Capture and Share the World's Moments</h2>
+
+            <p class="p-flex-text">Instagram is a <strong>fast, beautiful</strong>  and <strong>fun</strong> way to share your life with
+              friends and family.</p>
+
+            <p class="p-flex-text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+            <p class="p-flex-text">Oh yeah, did we mention it's free?</p>
+
+            <div class="download-images">
+
+              <img src="../lab-css-instagram-clone/images/badge-iphone.png" alt="Download on the App Store" class="a-store">
+              <img src="../lab-css-instagram-clone/images/badge-android.png" alt="Get it on Google Play" class="g-play">
+
+            </div>
+
+          </div>
+
+        </article>
+
+      </section>
+
+    </main>
+
+    <footer>
+
+      <p>
+        <a href="#" class="links-foot">about us</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">support</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">blog</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">press</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">api</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">jobs</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">privacy</a>
+      </p>
+
+      <p>
+        <a href="#" class="links-foot">terms</a>
+      </p>
+
+      <p class="copy-r">
+        &copy; 2014 Instagram
+      </p>
+
+    </footer>
+  </div>
   </body>
 </html>
