--- a/index.html
+++ b/index.html
@@ -1,16 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="Stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <section class="tile">
+    <img src="images/bgtile.png" alt="bgtile">
+  </section>
+  <main>
+    <section id="big-block">
+
+      <section id="block1">
+
+        <div>
+          <img class="phones" src="images/phones.png" alt="phones">
+        </div>
+
+      </section>
+
+      <section class="block2">
+        <section class="home">
+
+          <div class="brand">
+            <img src="images/brand.png" alt="Brand">
+          </div>
+
+          <div class="log-in">
+            <img src="images/home.png" alt="Home">
+            <span><a href="#">Log in</a></span>
+          </div>
+
+        </section>
+
+        <section class="main-text">
+
+          <header>
+            <h1>Capture and Share <br> the World's Moments</h1>
+          </header>
+
+          <article>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun </strong> way to share your life with
+              friends and family.</p>
+          </article>
+
+          <article>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the
+              world.</p>
+          </article>
+
+          <article>
+            <p>Oh yeah, did we mention it's free?</p>
+          </article>
+
+          <section class="download">
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </section>
+        </section>
+
+      </section>
+  </main>
+
+  <footer>
+    <section class="last-block">
+      <nav>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <p>&copy; 2014 Instagram</a></p>
+        </ul>
+      </nav>
+    </section>
+  </footer>
+
+
+
+</body>
+
 </html>
