done with finalized details

--- a/index.html
+++ b/index.html
@@ -43,21 +43,18 @@
 
     <footer>
       <nav>
-        <ul class="nav-list">
-          <li class="nav-item"> About us </li>
-          <li class="nav-item"> Support </li>
-          <li class="nav-item"> Blog </li>
-          <li class="nav-item"> Press </li>
-          <li class="nav-item"> API </li>
-          <li class="nav-item"> Jobs </li>
-          <li class="nav-item"> Privacy </li>
-          <li class="nav-item"> Terms </li>
+        <ul id="nav-list">
+          <li class="nav-item"><a href="/about-us>"> About us </a></li>
+          <li class="nav-item"><a href="/support>"> Support </a></li>
+          <li class="nav-item"><a href="/blog>"> Blog </a></li>
+          <li class="nav-item"><a href="/press>"> Press </a></li>
+          <li class="nav-item"><a href="/api>"> API </a></li>
+          <li class="nav-item"><a href="/jobs>"> Jobs </a></li>
+          <li class="nav-item"><a href="/privacy>"> Privacy </a></li>
+          <li class="nav-item"><a href="/terms>"> Terms </a></li>
         </ul>
-        <span class="nav-item insta-logo"> &copy; 2014 Instagram </span>
+        <span id="insta-copyright" class="nav-item"> &copy; 2014 Instagram </span>
       </nav>
     </footer>
   </body>
 </html>
-
-
-<!-- Download on the App Store Get it on Google Play -->
