--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-
-  <main>
-    <header>
-      <div><img src="images/brand.png" alt=""></div>
-      <div class="login"><img src="images/home.png" alt="">Log in </div>
-    </header>
-    <div class="resume">
+  <header>
+    <div><img src="images/brand.png" alt=""></div>
+    <div class="login"><img src="images/home.png" alt="">Log in </div>
+  </header>
+  
+    <main class="resume">
+      
       <div class="title"><h2>Capture and Share the World's Moments </h2></div>
       <div class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life
         with friends and family.
@@ -27,8 +27,7 @@
         <img src="images/badge-iphone.png" alt="appstore">
         <img src="images/badge-android.png" alt="googleplay">
       </div>
-    </div>
-  </main>
+    </main>
 
   <div class="mobiles">
     <img src="images/phones.png" alt="mobiles"> </div>
