--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
 </head>
 
 <body>
-  <header>
+  <div class="header">
     <div><img src="images/brand.png" alt=""></div>
     <div class="login"><img src="images/home.png" alt="">Log in </div>
-  </header>
-  
-    <main class="resume">
-      
-      <div class="title"><h2>Capture and Share the World's Moments </h2></div>
-      <div class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life
-        with friends and family.
-        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-        world.
-        Oh yeah, did we mention it's free?</div>
-      <div class="stores">
-        <img src="images/badge-iphone.png" alt="appstore">
-        <img src="images/badge-android.png" alt="googleplay">
-      </div>
-    </main>
+  </div>
 
+  <main class="resume">
+
+    <div class="title">
+      <h2>Capture and Share the World's Moments </h2>
+    </div>
+    <div class="text">Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life
+      with friends and family.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+      world.
+      Oh yeah, did we mention it's free?</div>
+    <div class="stores">
+      <img src="images/badge-iphone.png" alt="appstore">
+      <img src="images/badge-android.png" alt="googleplay">
+
+
+    </div>
+  </main>
   <div class="mobiles">
     <img src="images/phones.png" alt="mobiles"> </div>
+
 
   <footer>
     <div>
