--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+<!-- DEFINE GRID -->
+
+    <div class="grid">
+
+<!-- PHONES -->
+
+      <img src="/images/phones.png" class="phone" alt="phones">
+
+<!-- HEADER -->
+
+      <header class="header">
+        <img src="/images/brand.png" alt="instagram logo" id="logo">
+        <button id="login"><img src="/images/home.png" alt=""><p>Log in</p></button>
+      </header>
+
+<!-- CONTENT -->
+
+      <div class="shadow"></div>
+      <div class="shadow-overlay"></div>
+      <div class="content">
+        <div class="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong>, and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram — it's that easy. You can even share to Facebook, Twitter, Tumblr, and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="download">
+          <img src="/images/badge-iphone.png" alt="download iphone" id="iphone">
+          <img src="/images/badge-android.png" alt="download android" id="android">
+        </div>
+      </div>
+
+<!-- FOOTER -->
+
+    <footer class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copyright">©2014 Instagram</li>
+      </ul>
+    </footer>
+
+<!-- END GRID -->
+
+    </div>
   </body>
 </html>
