--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,41 +9,44 @@
 </head>
 
 <body>
+  <div class="general-container">
 
-  <section>
-    <img src="./images/phones.png" alt="" />
-  </section>
+    <section class="left-bar">
+      <img src="./images/phones.png" alt="cell" />
+    </section>
 
-  <section>
-    <h1>
-      Instagram
-    </h1>
+    <section class="right-bar">
+      <div class="leftBox">
 
-    <article>
-      <h2>Capture and Share the World's Moments</h2>
-      <p>
-        Instagram is a fast, beautiful and fun way to share your life with
-        friends and family.
-      </p>
-      <p>
-        Take a picture or video, choose a filter to transform its look and
-        feel, then post to Instagram &mdash; it's that easy. You can even
-        share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-        world.
-      </p>
-      <p>Oh yeah, did we mention it's free?</p>
-      <div>
-        <a href="https://apps.apple.com/mx/app/instagram/id389801252">
-          <p>Download on the</p>
-          <h3>App Store</h3>
-        </a>
-        <a href="https://play.google.com/store/apps/details?id=com.instagram.android">
-          <p>Get it on</p>
-          <h3>Google Play</h3>
-        </a>
+        <div class="login">
+          <div><img src="images/brand.png" alt="Instagram logo"></div>
+          <div class="loginButton"><a href="#" class="login-button"><img src="images/home.png" alt="home button"
+                class="button-image"> Log in</a></div>
+        </div>
+
+        <article class="white-box">
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?<br><br></p>
+          <div class="downloadButtons">
+            <img src="images/badge-iphone.png" alt="App Store">
+            <img src="images/badge-android.png" alt="Google Play">
+            
+          </div>
+        </article>
+
       </div>
-    </article>
-  </section>
+    </section>
+  </div>
 
   <footer>
     <ul>
@@ -56,10 +58,9 @@
       <li><a href="">Jobs</a></li>
       <li><a href="">Privacy</a></li>
       <li><a href="">Terms</a></li>
-      <li><a href="">&copy; 2014 Instagram</a></li>
+      <li class="copyR">&copy; 2014 Instagram</li>
     </ul>
   </footer>
-
 </body>
 
 </html>
