MEX-WDFT Emma Solano

--- a/index.html
+++ b/index.html
@@ -3,14 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="phones">
+      <img
+        id="phones-img"
+        src="../lab-css-instagram-clone/images/phones.png"
+        alt="smartones"
+      />
+    </div>
+    <section class="head-nav-bar">
+      <img
+        id="insta-logo"
+        src="../lab-css-instagram-clone/images/brand.png"
+        alt="Instagram logo"
+      />
+      <img
+        id="home-logo"
+        src="../lab-css-instagram-clone/images/home.png"
+        alt="home"
+      />
+    </section>
+    <section class="description">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with
+        friends and family. <br />
+        Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br />
+
+        Oh yeah, did we mention it's free? <br />
+      </p>
+    </section>
+
+    <section class="electronic-stores-logo">
+      <img
+        id="apple-logo"
+        src="../lab-css-instagram-clone/images/badge-iphone.png"
+        alt="Download on the App Store"
+      />
+      <img
+        id="android-logo"
+        src="../lab-css-instagram-clone/images/badge-android.png"
+        alt="Get it on Google Play"
+      />
+    </section>
+    <section class="footer-nav-bar">
+      <p>
+      <a href="#">About Us</a>   <a href="#">Support</a> <a href="#">Blog</a>
+        <a href="#">Press</a>   <a href="#">API</a> <a href="#">Jobs</a>
+        <a href="#">Privacy</a>   <a href="#">Terms</a>
+        <span>&copy; 2014 Instagram</span></p>
+    </section>
   </body>
 </html>
