MEX-WDFT-Eduardo

--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel='stylesheet' href='styles/style.css'>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id='izqFotos'>
+      <img id='imgCelulares' src='images/phones.png' alt='fotoDeCelulares'>
+    </section>
+    <section class='derTexto'>
+      <div id='imagenes'>
+        <div id='logoIg'><img src='images/brand.png' alt='igLogo'></div>
+        <div id='homeBut'><img src='images/home.png' alt='homeButton'>  Log in</div>
+      </div>
+      <div id='textoInt'>
+        <div id='textFondo'>
+          <h2>Capture and Share the World's Moments</h2>
+          <pr>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.
+          <br>
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          <br>
+          Oh yeah, did we mention it's free?
+          </pr>
+        </div>
+
+        <img id='iphone' src='images/badge-iphone.png'>
+        <img id='android' src='images/badge-android.png'>
+
+      </div>
+    </section>
+    <nav id=navBar>
+      <a href='#'>About Us</a>
+      <a href='#'>Support</a>
+      <a href='#'>Blog</a>
+      <a href='#'>Press</a>
+      <a href='#'>API</a>
+      <a href='#'>Jobs</a>
+      <a href='#'>Privacy</a>
+      <a href='#'>Terms</a>
+      <a href='#'>&copy; 2014 Instagram</a>
+    </nav>
   </body>
 </html>
