--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <img class="backBlue" src="./images/bgtile.png" alt="background">
+
+    <section class="iphones">
+      <img src="./images/phones.png" alt="phones">
+    </section>
+
+    <section class="info">
+      <section>
+        <div class="instaLogo">
+          <img class="logoInsta" src="./images/brand.png" alt="insta logo">
+        </div>
+        <div class="homeLogin">
+          <!-- <img src="images/home.png" alt="home login"> -->
+          <a href="#"><img src="images/home.png" alt="home login">Log in</a>
+        </div>
+      </section>
+      
+      <section class="infoInsta">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram&mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <P>Oh yeah, did we mention it's free?</P>
+        <img src="./images/badge-iphone.png" alt="Apple Store">
+        <img src="./images/badge-android.png" alt="Android Store">
+      </section>
+    </section>
+
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li>T<a href="#">erms</a></li>
+        </ul>
+        <span>&copy; 2014 Instagram</span>
+      </nav>
+    </footer>
   </body>
 </html>
