--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="background">
+      <img src="./images/bgtile.png" alt="bgtile">
+    <div>
+      <img id="phone"  src="./images/phones.png" alt="phone">
+
+      <img id="brand" src="./images/brand.png" alt="brand">
+      <button type="button">
+        <img id="home" src="./images/home.png" alt="home">
+        <span>Log in</span>
+      </button>
+      <h2>
+      Capture and Share <br>
+      the World's Moments
+    </h2>
+    <p>
+      Instagram is <strong>a fast</strong>, <strong>beautiful </strong>and <strong>fun</strong> 
+      way to share your life with friends and family. <br>
+      Take a picture or video, choose a filter to transform its look <br>
+      and feel, then post to Instagram &mdash; it's that easy. You can <br>
+      even share to Facebook, Twitter, Tumblr and more. It's a <br>
+      new way to see the world. <br>
+      Oh yeah, did we mention it's free?
+      <div id="get">
+        <div id="badge">
+       <img id="iphone" src="./images/badge-iphone.png" alt="iphone"> 
+       <img id="android" src="./images/badge-android.png" alt="android">
+      </div>
+    </div>
+    </p>
+    </div>
+    <div>
+      <footer>
+        About Us Support Blog Press API Jobs Privacy Terms  <span>&copy; 2014 Instagram</span> 
+      </footer>
+    </div>
+  </div>     
+      
+
   </body>
 </html>
