Some styling and layout details are still missing. Will improve it in the next few days.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <main id="contenedorPpal">
+
+      <div id="miniContenedor" class="flexContainer">
+        <div id="imagen">
+          <img src="./images/phones.png" alt="phones">
+        </div>
+          <section id="aLaDerecha" class="flexContainer">
+            <div id="login" class="flexContainer">
+              <img src="./images/brand.png" alt="isologo">
+              <button id="loginButton">
+                <img src="./images/home.png" alt="home">
+                Log in
+              </button>
+            </div>
+            <article id="captureMoments" class="flexContainer">
+              <h2>Capture and Share<br>the World's Moments</h2>
+              <p>Instagram is a fast, beautiful and fun way to share your life with
+                friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </article>
+            <div id="descargarApps">
+              <img src="./images/badge-iphone.png" alt="Download on the App Store">
+              <img src="./images/badge-android.png" alt="Get it on Google Play">
+            </div>
+          </section>
+      </div>
+      <footer class="flexContainer footer">
+        <ul class="flexContainer">
+          <li><a href="#" target="_self">ABOUT US</a></li>
+          <li><a href="#" target="_self">SUPPORT</a></li>
+          <li><a href="#" target="_self">BLOG</a></li>
+          <li><a href="#" target="_self">PRESS</a></li>
+          <li><a href="#" target="_self">API</a></li>
+          <li><a href="#" target="_self">JOBS</a></li>
+          <li><a href="#" target="_self">PRIVACY</a></li>
+          <li><a href="#" target="_self">TERMS</a></li>
+          <li id="copyright">&copy; 2014 INSTAGRAM</li>
+        </ul>
+      </footer>
+    </main>  
+  </body>
+</html>
+
+<!--Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
-</html>
+    Jobs Privacy Terms &copy; 2014 Instagram-->
