--- a/index.html
+++ b/index.html
@@ -3,14 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
+  <main>
+  <img src="images/bgtile.png">
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <div class="mainBox">
+      <div class="phoneImage">
+      </div>
+      <div class="infoBox">
+        <div class="infoBoxTop">
+          <div class="logo">
+            <img src="images/brand.png">
+          </div>
+          <div class="login">
+              <img src="images/home.png">
+            <a id="login" href="#"><b>Log in</b></a>
+          </div>
+        </div>
+        <div class="infoBoxMiddle">
+        <div class="info">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+          </p>
+          <p>
+            Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play
+          </p>
+        </div>
+        </div>
+        <div class="infoBoxBottom">
+          <div class="appStore">
+            
+          </div>
+          <div class="googlePlay">
+            
+          </div>
+        </div>
+      </div>
+    </div> 
   </body>
+  <footer>
+    <nav>
+      <div class="navList">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+      </div>
+      <div class="copyright">
+        &copy; 2014 Instagram
+      </div>
+    </nav>
+  </footer>
+<main>
 </html>
