--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <body class="all">
+    <div class="background-blue"></div>
+    <div class="all-main">
+      <div class="phones">
+        <img src="./images/phones.png" />
+      </div>
+      <div class="right-big-block">
+        <div class="logo-login">
+          <img class="ig" src="./images/brand.png" />
+          <div class="login-button">
+            <img src="./images/home.png" />
+            <p class="login-text">Log in</p>
+          </div>
+        </div>
+        <div class="main-text-container">
+          <h1>Capture and Share the World's Moments</h1>
+
+          <p class="grey">
+            Instagram is a <strong>fast</strong> ,
+            <strong>beautiful</strong> and <strong>fun</strong> way to share
+            your life with friends and family.
+            <br />
+            <br />
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+            <br />
+            <br />
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="download">
+            <img src="./images/badge-iphone.png" class="imgDown" />
+            <img src="./images/badge-android.png" class="imgDown" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+
+      <div class="grey">&copy; 2014 Instagramfun</div>
+    </footer>
   </body>
 </html>
