--- a/index.html
+++ b/index.html
@@ -3,14 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css">
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+      <div>
+        <img src="images/phones.png" alt="phones">
+      </div>
+      <div class = "fullcontent">
+        <div class="instagramlogoheader">
+          <img src="images/brand.png" alt="brandlogo">
+          <div class="loginbutton">
+            <img src="images/home.png" alt="home logo">
+            <a href="https://www.instagram.com/accounts/login/?hl=en"> Log&nbsp;In </a>
+          </div>
+        </div>
+        <article>
+          <div class="articlecontent">
+            <h1>Capture and Share the&nbsp;World's&nbsp;Moments </h1>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div>
+            <img src="images/badge-iphone.png" alt="iphone logo">
+            <img src="images/badge-android.png" alt="android logo">
+          </div>
+        </article>
+
+      </div>
+
+    </section>
+
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class= "copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
+         
   </body>
 </html>
