--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="wrapper">
+      <div id="wrapper-content">
+        <section id="container-phone-image">
+          <img src="images/phones.png"/>
+        </section>
+        <section id="wrapper-text">
+          <div id="login-area">
+            <img src="images/brand.png" alt="instagram-logo"/>
+            <a href="#" class="myButton">
+              <img src="images/home.png" alt="logo-home"/>
+              <p>Log In</p>
+            </a>
+          </div>
+          <div id="content-area">
+            <h1>Capture and Share<br>the World's Moments</h1> <article>
+              <p>
+                Instagram is a fast, beautiful and fun
+                way to share your life with friends and family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <p>
+                Oh yeah, did we mention it's free?
+              </p>
+            </article>
+          </div>
+          <div id="app-buttons">
+            <img src="images/badge-iphone.png" alt="app-store-iphone"/>
+            <img src="images/badge-android.png" alt="app-store-android"/>
+          </div>
+        </section>
+      </div>
+      <footer>
+        <div id="wrapper-footer">
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy Terms</a>
+          <p>&copy; 2014 Instagram</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
