--- a/index.html
+++ b/index.html
@@ -5,12 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div class="wrap">
+
+    <div class="left-col">
+      <img class="phones" src="./images/phones.png" alt="phones-image"/>
+
+    </div>
+
+    <div class="right-col">
+
+    <div class="right-col-header">
+      <img class="Instagram-logo" src="./images/brand.png" alt="Instagram-logo"/>
+      <div class="log-in-bt"><span>Log-in</span></div>
+
+    </div>  
+
+      <div class="content-frame">
+      <h1 class="slogan-title">Capture and Share<br> the World's Moments </h1> 
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.</p><p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+
+    <div class="call-to-action">
+      <div class="google-bt"><span>Download on the App Store</span></div>
+      <div class="apple-bt"><span>Get it on Google Play</span></div>
+
+    </div>
+
+      </div>
+
+  </div>
+
+</div>
+
+  <div class="footer-nav">
+
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+
+ </div>
+
+
+  
+
   </body>
 </html>
