Unidades de medida CSS cambiadas y ajustadas de nuevo

--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
           </div> <!--Text zone finish-->
           <div id="dw-icons" class="container"> <!--Download icons-->  
               <div>
-                  <a href="https://apps.apple.com/es/app/instagram/id389801252"     target="blank">
+                  <a href="https://apps.apple.com/es/app/instagram/id389801252" target="blank">
                   <img src="./images/badge-iphone.png" alt="app store button">
                   </a>
                </div>
               <div>
-                <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target="blank"><img src="./images/badge-android.png" alt="play store button">
+                <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target="blank">
+                  <img src="./images/badge-android.png" alt="play store button">
                 </a>
               </div>
           </div> <!--Download icons finish-->
         </article> <!--Right half finish-->
-      </section> 
+      </section>
       <footer>
         <ul>
           <li>about us</li>
