--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
 
           <div class="brandAndLogin">
-          <div><img src="./images/brand.png" alt="instagramBadge"></div>
+          <div><img class="instagramBadge" src="./images/brand.png" alt="instagramBadge"></div>
           <div><button><a href="#"></a><img class="home" src="./images/home.png" alt="home">Log in</a></button></div>
           </div>
 
