--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/lab-css-instagram-clone/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header class="top">
+      <img src="/lab-css-instagram-clone/images/brand.png" alt="Instagram'logo">
+      <button><img src="/lab-css-instagram-clone/images/home.png" alt="Home illustration" class="littleHouse">Log in</button>
+    </header>
+
+    <main class="bottom">
+      <img class="phone" src="/lab-css-instagram-clone/images/phones.png" alt="Smartphone displaying Instagram ">
+
+      <article>
+
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <span>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</span>
+        <span>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</span>
+        <span>Oh yeah, did we mention it's free?</span>
+
+        <div>
+          <a href="#"><img src="/lab-css-instagram-clone/images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a href="#"><img src="/lab-css-instagram-clone/images/badge-android.png" alt="Download on Google play"></a>
+        </div>
+
+      </article>
+
+    </main>
+
+    <footer class="footer">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
