feat: Skeleton WIP

--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
+  
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+
+    <header class="main-header container">
+        <div class="title">
+          <img class="logo" src="./images/brand.png" alt="Instagram logo">
+        </div>
+        <nav class="nav-bar">
+            <img src="./images/home.png" alt="Home icon" class="nav-home">
+            <span>Log in</span>
+          </nav>
+    </header>
+
+    <section class="hero container">
+      <div class="mobile-img">
+        <img src="./images/phones.png" alt="Two mobile phones">
+      </div>
+    </section>
+
+
+    <!--
+      Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
+    -->
   </body>
 </html>
