Change footer margin-top

--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
     </section>
 
     <footer>
-      <div>About Us</div>
-      <div>Support</div>
-      <div>Blog</div>
-      <div>Press</div>
-      <div>API</div>
-      <div>Jobs</div>
-      <div>Privacy Terms</div>
-      <div id="copy-right">&copy; 2014 Instagram</div>
+      <ul>
+        <li><a>About Us</a></li>
+        <li><a>Support</a></li>
+        <li><a>Blog</a></li>
+        <li><a>Press</a></li>
+        <li><a>API</a></li>
+        <li><a>Jobs</a></li>
+        <li><a>Privacy</a></li>
+        <li><a>Terms</a></li>
+        <li id="copy-right">
+          &copy; 2014 Instagram
+        </li>
+      </ul>
     </footer>
 
   </body>
