--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       </main>
       <nav>
         <ul>
-          <li><a>About Us</a></li>
-          <li><a>Support</a></li>
-          <li><a>Blog</a></li>
-          <li><a>Press</a></li>
-          <li><a>API</a></li>
-          <li><a>Jobs</a></li>
-          <li><a>Privacy</a></li>
-          <li><a>Terms</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
           <li>
             &copy; 2014 Instagram
           </li>
