modifications to missing details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="description">
         <h1>Capture and Share the World's Moments</h1>
         <p>
-          Instagram is a fast, beautiful and fun way to share your life with
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
           friends and family. <br> <br>
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
