exercise all completed

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" type='text/css' href="./styles/style.css">
   </head>
   <body>
-    <header>
-       
-    </header>
-   
+    <header></header> 
     <main>
       <figure>
         <img id="image-device" src="images/phones.png" alt="image devices">
