--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <div id="content">
+    <div class="image">
+      <img src="images/phones.png" alt="Phone images">
+    </div>
+    <div class="text">
+      <div class="heder-text">
+        <img src="images/brand.png" alt="Instagram Logo">
+        <div class="button-home">
+          <img src="images/home.png" alt="">Login
+        </div>
+      </div>
+      <div class="title-text">
+        <h3>Capture and Share<br>the World's Moments</h3>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="buttons-stores">
+          <img src="./images/badge-iphone.png" alt="Apple Store Button">
+          <img src="./images/badge-android.png" alt="Google Play Button">
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  <div id="footer">
+    <a href="">About Us</a>
+    <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+
+
+
+  </div>
+
+
+
+
+</body>
+
 </html>
