--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/style.css">
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <div class="container">
+    <div class="container-instagram">
+      <div class="phone-col"><img src="./images/phones.png" alt="Phones"></div>
+      <div class="info-col">
+        <div class="brand-login">
+          <div class="brand-image">
+            <img src="./images/brand.png" alt="Brand">
+          </div>
+          <div class="login-button">
+            <img height="22" width="25" src="./images/home.png" alt="">
+            <span class="login-text">Log in</span>
+          </div>
+        </div>
+        <div class="info">
+          <h1 class="insta-title">Capture and Share the World's Moments</h1>
+          <p class="insta-text">Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share
+            your life with friends and family. <br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to
+            Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way
+            to see the world. <br><br>
+            Oh yeah, did we mention it's free? </p>
+          <div class="social-logos">
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="menu">
+    <ul class="insta-menu">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+
+
+  </div>
+
+
+</body>
+
 </html>
